left-align-menu-footer-fix-pt

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ h1 {
 .logo img {
     position: absolute;
     top: -3em;
-    left: 0;
+    right: 0;
     max-width: 130px;
 }
 
@@ -159,8 +159,8 @@ h1 {
 .nav-toggle-label {
     position: absolute;
     top: 0;
-    right: 0;
-    margin-right: 1em;
+    left: 0;
+    margin-left: 1em;
     height: 100%;
     display: flex;
     align-items: center;
@@ -194,11 +194,11 @@ h1 {
 
 nav {
     position: absolute;
-    text-align: right;
+    text-align: left;
     top: 100%;
-    right: 0;
+    left: 0;
     padding-right: 1rem;
-    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 5px;
     max-width: 70%;
     transform: scale(1, 0);
     transform-origin: top;
@@ -476,13 +476,13 @@ footer section ul li a {
     text-transform: capitalize;
     text-decoration: none;
     font-weight: 300;
-    color: #bbbbbb;
+    color: var(--white);
     display: block;
     transition: all 0.3s ease;
 }
 
 footer section ul li a:hover {
-    color: var(--white);
+    color: var(--light-yellow);
     padding-left: 8px;
 }
 
